--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,15 +18,14 @@
 <div id="Categories" class="tabcontent1">
   <h3>Categories</h3>
   <div class="tab">
-    <button class="tablinks" onclick="openCity(event, 'Show_Category')">Show</button>
+    <button class="tablinks" onclick="openCity(event, 'Show_Category');ShowCategories()">Show</button>
     <button class="tablinks" onclick="openCity(event, 'Remove_Category')">Remove</button>
     <button class="tablinks" onclick="openCity(event, 'Update_Category')">Update</button>
     <button class="tablinks" onclick="openCity(event, 'Add_Category')">Add</button>
   </div>
   
   <div id="Show_Category" class="tabcontent">
-    <h3>Afisare</h3>
-    <button onclick="ShowCategories()">Delete</button>
+    
   </div>
   
   <div id="Remove_Category" class="tabcontent">
@@ -40,8 +39,15 @@
     <p>Aici modificam categorii</p>
   </div>
   <div id="Add_Category" class="tabcontent">
-    <h3>Add</h3>
-    <p>Aici adaugam categorii</p>
+    <div class="card">
+      
+      <div class="container">
+        <h4>Title: <input type="text" id="TitleAdd"></h4>
+        Description: <input type="text" id="DescriptionAdd">
+      </div>
+    </div>
+    <button class="Button_Add" onclick="AddCategory()">Add</button>
+  </div>
   </div>
 </div>
 
