--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 <body>
 
   <button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-<button class="tablink" onclick="openPage('Categories', this, 'green')" id="defaultOpen">Categories</button>
+<button class="tablink" onclick="openPage('Categories', this, 'green');ShowCategories()" id="defaultOpen">Categories</button>
 <button class="tablink" onclick="openPage('Articles', this, 'blue')">Articles</button>
 <button class="tablink" onclick="openPage('Authors', this, 'orange')">Authors</button>
 
@@ -17,38 +17,8 @@
 
 <div id="Categories" class="tabcontent1">
   <h3>Categories</h3>
-  <div class="tab">
-    <button class="tablinks" onclick="openCity(event, 'Show_Category');ShowCategories()">Show</button>
-    <button class="tablinks" onclick="openCity(event, 'Remove_Category')">Remove</button>
-    <button class="tablinks" onclick="openCity(event, 'Update_Category')">Update</button>
-    <button class="tablinks" onclick="openCity(event, 'Add_Category')">Add</button>
-  </div>
   
-  <div id="Show_Category" class="tabcontent">
-    
-  </div>
-  
-  <div id="Remove_Category" class="tabcontent">
-    <h3>Stergere</h3>
-    <input id="Id1">
-    <button onclick="deletebyId()">Delete</button>
-  </div>
-  
-  <div id="Update_Category" class="tabcontent">
-    <h3>modify</h3>
-    <p>Aici modificam categorii</p>
-  </div>
-  <div id="Add_Category" class="tabcontent">
-    <div class="card">
-      
-      <div class="container">
-        <h4>Title: <input type="text" id="TitleAdd"></h4>
-        Description: <input type="text" id="DescriptionAdd">
-      </div>
-    </div>
-    <button class="Button_Add" onclick="AddCategory()">Add</button>
-  </div>
-  </div>
+ 
 </div>
 
 
